--- a/Keil/Objects/Project.build_log.htm
+++ b/Keil/Objects/Project.build_log.htm
@@ -3,9 +3,9 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.38.0.0
+IDE-Version: ÂµVision V5.38.0.0
 Copyright (C) 2022 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Ali Mohamed, Engineering, LIC=----
+License Information: kj;i klnlkn, klnlkn, LIC=----
  
 Tool Versions:
 Toolchain:       PK51 Prof. Develpers Kit  Version: 9.60.7.0
@@ -18,18 +18,18 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.125.1.0
 Dialog DLL:      DP51.DLL V2.69.0.0 
 <h2>Project:</h2>
-E:\Embedded Projects\S_Term\Project_2\Frequency-Meter-8051\Keil\Project.uvproj
-Project File Date:  03/01/2025
+C:\Users\Windows VM\Desktop\Frequency-Meter-8051\Keil\Project.uvproj
+Project File Date:  03/03/2025
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
 assembling STARTUP.A51...
 compiling main.c...
 linking...
-Program Size: data=42.0 xdata=0 code=1042
+Program Size: data=44.0 xdata=0 code=1065
 creating hex file from ".\Objects\Project"...
 ".\Objects\Project" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
